--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,93 @@
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+    filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+    filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
 
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
 .read-the-docs {
-  color: #888;
+    color: #888;
+}
+
+/* ----- */
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+.landingWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+.brandTitle {
+    font-family: "Krona One", sans-serif;
+    font-size: 22px;
+    font-weight: 100;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 2rem;
+    color: #68b790;
+}
+.slogan {
+    font-family: "Krona One", sans-serif;
+}
+.landingLogoConnect {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    text-align: center;
+}
+.emphaz {
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 25px;
+}
+.descLanding {
+    color: #c6c6c6;
+    font-size: 16px;
+    text-align: center;
+    margin: 2rem;
+    font-family: "Fira Code", sans-serif;
+    text-transform: unset;
+}
+
+/* ----- */
+.backGroundGeneral {
+    background-color: #030303;
+    color: #fff;
 }
