landing + connect + start_card

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ body {
     min-width: 320px;
     min-height: 100vh;
     background-color: #030303;
+    font-family: "Baloo Paaji 2", sans-serif;
 }
 
 h1 {
