--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,83 @@
     background-color: #030303;
     color: #fff;
 }
+.cardHeader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 36px;
+        background: linear-gradient(
+            180deg,
+            rgba(3, 3, 3, 1) 0%,
+            rgb(41, 41, 41) 100%
+        );
+        margin: 2rem 0;
+        border-radius: 0 0 20px 20px;
+    }
+}
+.tagNew {
+    position: absolute;
+    top: -30px;
+    right: -20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #c6c6c6;
+    padding: 5px 20px;
+    border-radius: 20px 0 0 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+.cardHeader .brand {
+    font-family: "Krona One", sans-serif;
+    font-size: 22px;
+    width: 100%;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #68b790;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 20px;
+}
+.gauge-container {
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    margin: 10px;
+}
+.gauge {
+    margin: 0 auto;
+}
+.gauge-score {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    .score-text {
+        font-size: 50px;
+        font-weight: 700;
+        color: #fff;
+        line-height: 1;
+    }
+    .score-info {
+        font-size: 16px;
+        font-family: "Fira Code", sans-serif;
+        color: #c6c6c6;
+    }
+}
+.glass {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 200px;
+    padding: 1rem;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+    z-index: 1;
+    margin: 0 auto;
+}
