--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@
     top: -30px;
     right: -20px;
     background-color: rgba(255, 255, 255, 0.1);
-    color: #c6c6c6;
+    color: #656565;
     padding: 5px 20px;
     border-radius: 20px 0 0 20px;
     text-transform: uppercase;
