--- a/src/App.css
+++ b/src/App.css
@@ -171,3 +171,21 @@
     z-index: 1;
     margin: 0 auto;
 }
+/* ------ */
+
+.name {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -25px;
+}
+.imgToken {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.imgToken img {
+    width: 50px;
+    height: 50px;
+    aspect-ratio: 1;
+}
