--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@ body {
     min-width: 320px;
     min-height: 100vh;
     background-color: #060606;
-    font-family: "Baloo Paaji 2", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 h1 {
