--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,239 @@
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+    filter: drop-shadow(0 0 2em #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+    filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
 
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
 .read-the-docs {
-  color: #888;
+    color: #888;
+}
+
+/* ----- */
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+.landingWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+.brandTitle {
+    font-family: "Krona One", sans-serif;
+    font-size: 22px;
+    font-weight: 100;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 2rem;
+    color: #68b790;
+}
+.slogan {
+    font-family: "Krona One", sans-serif;
+}
+.landingLogoConnect {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    text-align: center;
+}
+.emphaz {
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 25px;
+}
+.descLanding {
+    color: #c6c6c6;
+    font-size: 16px;
+    text-align: center;
+    margin: 2rem;
+    font-family: "Fira Code", sans-serif;
+    text-transform: unset;
+}
+
+/* ----- */
+.backGroundGeneral {
+    background-color: #060606;
+    color: #fff;
+}
+.cardHeader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    &:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 36px;
+        background: linear-gradient(
+            180deg,
+            rgba(3, 3, 3, 1) 0%,
+            rgb(41, 41, 41) 100%
+        );
+        margin: 2rem 0;
+        border-radius: 0 0 20px 20px;
+    }
+}
+.tagNew {
+    position: absolute;
+    top: -30px;
+    right: -20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #656565;
+    padding: 5px 20px;
+    border-radius: 20px 0 0 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 18px;
+    letter-spacing: 2px;
+}
+.cardHeader .brand {
+    font-family: "Krona One", sans-serif;
+    font-size: 22px;
+    width: 100%;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    color: #68b790;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 20px;
+}
+.gauge-container {
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    margin: 10px;
+}
+.gauge {
+    margin: 0 auto;
+}
+.gauge-score {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    .score-text {
+        font-size: 50px;
+        font-weight: 700;
+        color: #fff;
+        line-height: 1;
+    }
+    .score-info {
+        font-size: 16px;
+        font-family: "Fira Code", sans-serif;
+        color: #c6c6c6;
+    }
+}
+.glass {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 200px;
+    padding: 1rem;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+    z-index: 1;
+    margin: 0 auto;
+}
+/* ------ */
+
+.name {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -25px;
+}
+.imgToken {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.imgToken img {
+    width: 50px;
+    height: 50px;
+    aspect-ratio: 1;
+}
+.tokenName {
+    text-align: center;
+    font-family: "Fira Code", sans-serif;
+    font-size: 26px;
+    margin-top: 20px;
+    color: #c6c6c6;
+    font-weight: 600;
+}
+.dataToken {
+    text-align: center;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    color: #c6c6c6;
+    font-weight: bold;
+
+    li {
+        width: 50%;
+    }
+    > li:first-child {
+        border-right: 1px solid #ccc;
+        padding-right: 15px;
+    }
+    > li:nth-child(2) {
+        padding-left: 25px;
+    }
+    span {
+        justify-content: center;
+    }
+}
+.titleData {
+    font-family: "Fira Code", sans-serif;
+    font-size: 16px;
+    color: #656565;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.percentMovement {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.upOrDown {
+    width: 50px;
 }
