--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@
 }
 .gauge-score {
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -164,7 +164,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -25px;
+    margin-top: -55px;
 }
 .imgToken {
     display: flex;
@@ -226,6 +226,9 @@
 }
 .buttonsToken {
     min-height: 60px;
+    .left {
+        left: -10px;
+    }
 }
 
 /* ------ */
@@ -260,4 +263,67 @@
 }
 .swipToken {
     height: 700px;
+}
+
+.wrapperScreen {
+    position: relative;
+}
+.nav-swiper {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    right: -150px;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    background: #474747;
+    z-index: 2;
+    background: linear-gradient(145deg, #474747, #3b3b3b);
+    border: none;
+    position: absolute;
+    bottom: 0;
+    right: -50px;
+    top: 50%;
+    transition: all 0.3s ease;
+    &:hover {
+        background: linear-gradient(145deg, #3b3b3b, #474747);
+        > * {
+            color: #528e70;
+        }
+    }
+    &:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        top: 0;
+        left: 0;
+        border-left: 0.1px solid #666;
+        transform: rotate(45deg);
+    }
+    > * {
+        transition: all 0.3s ease;
+        color: #68b790;
+        font-family: "Fira Code", sans-serif;
+        font-size: 22px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        display: block;
+    }
+    &.swiper-button-prev {
+        margin-top: -40px;
+    }
+    &.swiper-button-next {
+        margin-top: 40px;
+    }
 }
