--- a/src/App.css
+++ b/src/App.css
@@ -207,6 +207,11 @@
     }
     span {
         justify-content: center;
+        font-family: "Fira Code", sans-serif;
+    }
+
+    .chiffres {
+        font-family: "NB-Black", sans-serif;
     }
 }
 .titleData {
@@ -240,6 +245,7 @@
     padding: 5px 15px;
     border-radius: 20px;
     color: #fff;
+    font-family: "NB-Medium", sans-serif;
 }
 .buttonBuy {
     background: #68b790;
@@ -249,6 +255,8 @@
     border-radius: 20px;
     padding: 5px 20px;
     transition: all 0.3s;
+    font-family: "NB-Bold", sans-serif;
+    letter-spacing: 2px;
     &:disabled {
         border: 2px solid #656565;
         background: #3a3a3a;
