--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,11 @@
     margin-top: 20px;
     color: #c6c6c6;
     font-weight: 600;
+    &.flipped {
+        margin-top: 0;
+        margin-left: 20px;
+        font-size: 16px;
+    }
 }
 .dataToken {
     text-align: center;
@@ -428,5 +433,98 @@
         font-weight: 400;
         line-height: normal;
         display: block;
+    }
+}
+.scoreDetail {
+    font-family: "Fira Code", sans-serif;
+    font-size: 16px;
+    color: #656565;
+    span {
+        color: #68b790;
+        font-family: "NB-Medium", sans-serif;
+    }
+}
+.wrapperFlip {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    .block {
+        border-bottom: 1px solid #656565;
+        &:last-child {
+            border-bottom: none;
+        }
+        h3 {
+            text-transform: uppercase;
+            font-family: "Fira Code", sans-serif;
+            font-size: 12px;
+            color: #c6c6c6;
+        }
+    }
+}
+.icon svg {
+    margin-right: 10px;
+}
+.volume {
+    svg:first-child {
+        path {
+            stroke: #428f4f;
+        }
+    }
+    svg:nth-child(2) {
+        path {
+            stroke: #428f4f;
+        }
+    }
+    svg:nth-child(3) {
+        path {
+            stroke: #428f4f;
+        }
+    }
+    svg:nth-child(4) {
+        path {
+            stroke: #428f4f;
+        }
+    }
+}
+.holder {
+    svg:first-child {
+        path {
+            stroke: #2479dc;
+        }
+    }
+    svg:nth-child(2) {
+        path {
+            stroke: #2479dc;
+        }
+    }
+    svg:nth-child(3) {
+        path {
+            stroke: #2479dc;
+        }
+    }
+}
+.social {
+    svg:first-child {
+        path {
+            stroke: #d6b749;
+        }
+    }
+}
+.supply {
+    svg:first-child {
+        circle {
+            stroke: #8f52bf;
+        }
+    }
+    svg:nth-child(2) {
+        circle {
+            stroke: #8f52bf;
+        }
+    }
+}
+.holder2 {
+    path {
+        stroke: #f394ef;
     }
 }
