--- a/src/App.css
+++ b/src/App.css
@@ -355,7 +355,7 @@
     position: relative;
 }
 .swiper-slide-prev:after {
-    content: "";
+    /* content: "";
     position: absolute;
     width: 100%;
     height: 50px;
@@ -363,10 +363,10 @@
     left: 0;
     background: linear-gradient(180deg, #282828, #131315);
     border-radius: 20px;
-    z-index: 10;
+    z-index: 10; */
 }
 .swiper-slide-next:before {
-    content: "";
+    /* content: "";
     position: absolute;
     width: 100%;
     height: 50px;
@@ -374,7 +374,7 @@
     left: 0;
     background: linear-gradient(180deg, #131315, #282828);
     border-radius: 20px;
-    z-index: 10;
+    z-index: 10; */
 }
 .infoButton {
     cursor: pointer;
