--- a/src/App.css
+++ b/src/App.css
@@ -260,7 +260,7 @@
     text-transform: uppercase;
     color: #08512d;
     border-radius: 20px;
-    padding: 5px 20px;
+    padding: 6px 20px 5px 22px;
     transition: all 0.3s;
     font-family: "NB-Bold", sans-serif;
     letter-spacing: 2px;
@@ -556,7 +556,7 @@
         font-size: 14px !important;
     }
 }
-@media all and (max-width: 450px) and (min-height: 600px) and (max-height: 800px) {
+@media all and (max-width: 450px) and (min-height: 600px) and (max-height: 900px) {
     .gauge-container {
         height: 200px !important;
         width: 200px !important;
@@ -581,8 +581,10 @@
         justify-content: space-between;
         align-items: center;
         width: 100%;
+        padding-bottom: 0;
         .brand {
             font-size: 12px;
+            margin-bottom: 0;
         }
         button {
             max-width: 144px;
@@ -595,8 +597,23 @@
     .selectSol li {
         font-size: 12px;
     }
+    .formBuy {
+        width: 100%;
+    }
     .inputBuy,
     .buttonBuy {
-        padding: 1px 10px;
+        padding: 2px 10px 1px 12px;
+    }
+    .wallet {
+        font-size: 12px;
+    }
+    .balanceWrap {
+        margin-top: 5px !important;
+        span {
+            font-size: 12px;
+        }
+        .balance {
+            margin-right: 5px !important;
+        }
     }
 }
