--- a/src/App.css
+++ b/src/App.css
@@ -271,6 +271,9 @@
         cursor: not-allowed;
     }
 }
+.formBuy {
+    width: 100%;
+}
 .wrapBuy {
     justify-content: space-between;
     align-items: center;
@@ -353,28 +356,6 @@
 .swiper-slide-next {
     filter: blur(2px);
     position: relative;
-}
-.swiper-slide-prev:after {
-    /* content: "";
-    position: absolute;
-    width: 100%;
-    height: 50px;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(180deg, #282828, #131315);
-    border-radius: 20px;
-    z-index: 10; */
-}
-.swiper-slide-next:before {
-    /* content: "";
-    position: absolute;
-    width: 100%;
-    height: 50px;
-    top: 0;
-    left: 0;
-    background: linear-gradient(180deg, #131315, #282828);
-    border-radius: 20px;
-    z-index: 10; */
 }
 .infoButton {
     cursor: pointer;
@@ -511,6 +492,7 @@
     font-size: 12px;
     font-family: "Fira Code", sans-serif;
     color: #c6c6c6;
+    margin-right: 5px !important;
 }
 .solonaLogo {
     width: 10px;
@@ -556,7 +538,7 @@
         font-size: 14px !important;
     }
 }
-@media all and (max-width: 450px) and (min-height: 600px) and (max-height: 900px) {
+@media all and (max-width: 600px) and (min-height: 600px) and (max-height: 900px) {
     .gauge-container {
         height: 200px !important;
         width: 200px !important;
