--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
     filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.centerXY {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
 @keyframes logo-spin {
     from {
         transform: rotate(0deg);
