--- a/src/App.css
+++ b/src/App.css
@@ -267,7 +267,8 @@
     text-transform: uppercase;
     color: #08512d;
     border-radius: 20px;
-    padding: 6px 20px 5px 22px;
+    width: auto;
+    padding: 5px 20px 5px 23px;
     transition: all 0.3s;
     font-family: "NB-Bold", sans-serif;
     letter-spacing: 2px;
@@ -591,7 +592,7 @@
     }
     .inputBuy,
     .buttonBuy {
-        padding: 2px 10px 1px 12px;
+        padding: 2px 15px 2px 17px;
     }
     .wallet {
         font-size: 12px;
